[tool.poetry]
name = "gitalek_linked_list"
version = "0.1.2"
description = "Linked list realization"
authors = ["Alexander <sunny.os87@rambler.ru>"]
packages = [
  { include = "linked_list" }
]

[tool.poetry.scripts]
linked-list = "linked_list.scripts.linked_list:main"

[tool.poetry.dependencies]
python = "3.8.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest = "^5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
