[tool.poetry]
name = "gitalek_linked_list"
version = "0.2.4"
description = "Data structures realization"
authors = ["Alexander <sunny.os87@rambler.ru>"]
packages = [
  { include = "data_structures" }
]

[tool.poetry.scripts]
linked-list = "data_structures.scripts.linked_list:main"

[tool.poetry.dependencies]
python = "3.6.10"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest = "^5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
